fix: /header changed spacing

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,8 +6,10 @@
     border-bottom: 1px solid var(--primary);
     position: relative;
     display:flex;
+    justify-content: space-between;
     margin-bottom: 20px;
     align-items: center;
+    padding: 0 18px;
 }
 
 .logo{
@@ -15,7 +17,6 @@
     font-style: normal;
     color: var(--dark);
     width: 228px;
-    margin-left: 18px;
     font-size: 70px;
     text-align: center;
     font-weight: 400;
@@ -26,9 +27,7 @@
 
 .navbar {
     display: flex;
-    flex-direction: row;
     align-items: center;
-    margin-left: 15%;
 }
 
 .navbar a {
@@ -40,12 +39,6 @@
     font-weight: 400;
     font-size: 40px;
     padding: 0 20px;
-}
-
-.nameButton {
-    position: absolute;
-    right: 10%;
-    top: 8px;
 }
 
 .nameButton a {
@@ -70,16 +63,19 @@
     color: #fff;
 }
 
+.buttonGroup {
+    position: relative;
+}
+
+
 .menu {
     position: absolute;
-    top: 0;
-    right: 0;
+    /* top: 0;
+    right: 0; */
     display: flex;
     flex-direction: column;
     align-items: center;
     background: #FFFFFF;
-    right: 10%;
-    top:49px;
 }
 
 .menuItem {
@@ -103,9 +99,9 @@
 }
 
 .guestButtons {
-    position: absolute;
+    /* position: absolute;
     right: 5%;
-    top: 8px;
+    top: 8px; */
     width: 255px;
     height: 40px;
     display: flex;
